<resources>

    <string name="app_name">Tasks</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="change_notes">
        * Icon changed\n* Now you can backup your tasks\n* Use terms has change
    </string>
    <!-- license -->
    <string name="license_terms">
        By using this application you agree to the following terms:\n\n
        * Do not use this application to organize wars,terrorists attacks,
        or attacks on ethnic, religious,social or by hatred reasons against
        gender, sexuality and identity.\n\n
        * Do not use this application to organize murders,theft, corruption
        crimes, embezzlement, extortion or misappropriation of public resources
    </string>
    <string name="license_title">Terms of use</string>
    <string name="license_agree">Agree</string>
    <string name="license_disagree">Disagree</string>

    <!-- Task activity-->
    <string name="empty_task_list">No Tasks Registered</string>
    <string name="task_item_completed_tasks">Completed Task: </string>
    <string name="task_no_subtasks_registered">Touch to add subtasks.</string>

    <!-- Tasks fragments -->
    <string name="all_task_fragment_title">All tasks</string>
    <string name="today_task_fragment_title">Today tasks</string>
    <string name="completed_task_fragment_title">Completed tasks</string>
    <string name="backup_task_fragment_title">Backed up tasks</string>

    <string name="today_task_fragment_empty_message">No tasks for today</string>
    <string name="completed_task_fragment_empty_message">No completed tasks</string>
    <string name="backup_task_fragment_empty_message">No backed up tasks</string>

    <!-- Dialogs -->
    <string name="dialog_message_ok">OK</string>
    <string name="dialog_message_cancel">Cancel</string>
    <string name="dialog_message_error">Error</string>
    <string name="dialog_options_edit">Edit</string>
    <string name="dialog_options_delete">Delete</string>
    <string name="dialog_options_backup">Backup</string>
    <string name="dialog_release_notes_title">Release Notes</string>

    <!-- New Task dialog -->
    <string name="new_task_title">New Task</string>
    <string name="new_task_task_name">Task Name</string>

    <!-- Task delete dialog -->
    <string name="dialog_delete_task_title">Delete the task: </string>

    <!-- Subtasks -->
    <string name="subtasks_updated_message_checked"> checked as completed</string>
    <string name="subtasks_updated_message_unchecked"> checked as uncompleted</string>
    <string name="subtasks_no_description">No description</string>
    <string name="subtasks_no_date">No defined date</string>
    <string name="subtasks_enter_name">Name</string>
    <string name="subtasks_enter_description">Enter description</string>
    <string name="subtasks_schedule_date">At</string>

    <!-- New Subtask Dialog-->
    <string name="dialog_new_subtask_title">New Subtask</string>
    <string name="dialog_new_subtask_title_edit">Edit Subtask</string>
    <string name="dialog_new_subtask_name">Name</string>
    <string name="dialog_new_subtask_description">Description</string>
    <string name="dialog_new_subtask_select_date">Select Date</string>
    <string name="dialog_new_subtask_select_time">Select Time</string>

    <!-- Subtask options -->
    <string name="dialog_delete_subtask_title">Delete the subtask: </string>
    <string name="title_activity_dialog_subtask">SubtaskDialogActivity</string>

    <!-- Detail subtasks -->
    <string name="detail_subtasks_details_title">Details</string>
    <string name="title_activity_add_task">AddTaskActivity</string>

    <!-- Notifications -->
    <string name="notification_tasks_title">You have tasks today</string>
    <string name="notification_tasks_list_title">Today tasks</string>


    <!-- Navigation Drawer -->
    <string name="navigation_drawer_all_tasks">All Tasks</string>
    <string name="navigation_drawer_today_tasks">Today\'s Tasks</string>
    <string name="navigation_drawer_completed_tasks">Completed Tasks</string>
    <string name="navigation_drawer_backed_up_tasks">Backed up Tasks</string>
    <string name="navigation_drawer_settings">Settings</string>
    <string name="navigation_drawer_rate">Rate</string>
    <string name="navigation_drawer_error_open_store">Cannot open app in Play Store</string>

    <!-- Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="settings_category_display_tasks">Display Tasks</string>
    <string name="settings_category_notifications">Notifications</string>
    <string name="settings_category_backup">Backups</string>
    <!-- order -->
    <!-- order type -->
    <string name="settings_title_order">Order</string>
    <string name="settings_summary_order">The order that tasks are displayed</string>
    <string-array name="settings_order_labels">
        <item>No order</item>
        <item>Order by name</item>
        <item>Order by date</item>
        <item>Uncompleted first</item>
    </string-array>
    <string-array name="settings_order_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <!-- Capitalize -->
    <string name="settings_capitalize_first">Capitalize first letter</string>

    <!-- Notifications -->
    <string name="settings_notification_notify_all">Notify all tasks of day</string>
    <string name="settings_notification_notify_all_summary">Tasks are notified at midnight</string>
    <string name="settings_notification_notify_before">Notify tasks before</string>
    <string-array name="settings_notification_notify_before_label">
        <item>5 hours</item>
        <item>3 hours</item>
        <item>2 hours</item>
        <item>1 hour</item>
        <item>half hour</item>
        <item>15 minutes</item>
    </string-array>
    <string-array name="settings_notification_notify_before_values">
        <item>300</item>
        <item>180</item>
        <item>120</item>
        <item>60</item>
        <item>30</item>
        <item>15</item>
    </string-array>
    <string name="settings_notification_vibrate">Vibrate</string>

    <!-- backup -->
    <string name="settings_backup_manual_backup">Manual backup</string>
    <string name="settings_backup_manual_backup_summary">Enables user to manually backup and restore tasks</string>

    <!-- Backup -->
    <string name="backup_task_button_restore_label">Restore</string>
    <string name="backup_task_button_delete_label">Delete</string>
    <string name="backup_task_restore_message">Do you wish to restore these backups?</string>
    <string name="backup_task_delete_message">Do you wish to delete these backups?</string>
    <string name="backup_task_already_restored_message">The tasks is already restored</string>
    <string name="backup_task_time_message">Backup made at</string>
    <string name="backup_task_backup_done">Task successfully backed up </string>
    <string name="backup_task_restore_done">Task successfully restored</string>
    <string name="dialog_backup_enabled">Manual backup enabled, please restart app</string>
    <string name="dialog_backup_disabled">Manual backup disabled, please restart app</string>
    <string name="task">Tarefa</string>
    <string name="add_task">Nova Categoria</string>
    <string name="new_category">Nova categoria</string>
    <string name="enter_date">Data(opcional)</string>
    <string name="enter_time">Hora(opcional)</string>
    <string name="new_category_name">Category Name</string>
    <string name="save">Save</string>
    <string name="enter_date_time">Data e hora (Opcional)</string>


</resources>
