<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.apps.esampaio.new_version.view.task.NewTaskActivity">


    <androidx.appcompat.widget.Toolbar
        style="@style/TranslucentActionBar"
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        app:title="@string/new_task_title"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<Spinner
    android:id="@+id/task_category"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_category"
        android:layout_width="0dp"
        android:hint="@string/subtasks_enter_name"
        style="@style/NewAppEditTextStyle"
        android:lines="1"

        android:id="@+id/subtask_name"
        android:layout_height="wrap_content"/>

    <Button
        style="@style/NewAppEditTextStyle"
        android:hint="@string/enter_date"
        app:layout_constraintTop_toBottomOf="@id/subtask_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent=".5"

        android:id="@+id/add_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <Button
        style="@style/NewAppEditTextStyle"
        android:hint="@string/enter_time"
        app:layout_constraintTop_toBottomOf="@id/subtask_name"
        app:layout_constraintStart_toEndOf="@id/add_date"
        app:layout_constraintWidth_percent=".5"
        android:id="@+id/add_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>


    <EditText
        style="@style/NewAppEditTextStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_date"
        app:layout_constraintBottom_toTopOf="@+id/save_task_button"
        android:layout_width="0dp"
        android:id="@+id/subtask_description"
        android:hint="@string/subtasks_enter_description"
        android:gravity="top"
        android:lines="30"
        android:layout_height="0dp"/>


    <Button
        style="@style/NewAppButtonThemeColored.Green"

        android:text="Salvar"

        android:drawableLeft="@drawable/ic_check_dark"
        app:icon="@drawable/ic_check_dark"
        android:src="@drawable/ic_check_dark"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/save_task_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>


    <Button
        style="@style/NewAppButtonThemeColored.Red"

        android:text="Cancelar"


        android:drawableLeft="@drawable/ic_clear"
        android:src="@drawable/ic_check_dark"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintStart_toEndOf="@id/save_task_button"
        android:id="@+id/cancel_task_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>




</androidx.constraintlayout.widget.ConstraintLayout>