<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:text="@string/dialog_new_subtask_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_subtask_detail"
        android:id="@+id/textView"
        android:layout_marginLeft="72dp"
        android:textStyle="bold"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginLeft="72dp"
        android:layout_marginRight="16dp"
        android:id="@+id/activity_detail_subtask_description_edittext"
        android:layout_below="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:hint="@string/subtasks_enter_description" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_subtask_name"
        android:layout_alignParentLeft="true"
        android:id="@+id/imageView3"
        android:paddingLeft="16dp"
        android:layout_above="@+id/textView2"
        android:layout_below="@+id/textView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:id="@+id/activity_detail_subtask_name_edittext"
        android:layout_below="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="72dp"
        android:layout_marginRight="16dp"
        android:layout_alignParentLeft="true"
        android:hint="@string/subtasks_enter_name" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_subtask_desc"
        android:layout_alignParentLeft="true"
        android:id="@+id/imageView4"
        android:paddingLeft="16dp"
        android:layout_alignBottom="@+id/activity_detail_subtask_description_edittext"
        android:layout_below="@+id/textView2" />

    <TextView
        android:text="@string/dialog_new_subtask_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_marginLeft="72dp"
        android:textStyle="bold"
        android:layout_below="@+id/activity_detail_subtask_name_edittext"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true" />


</RelativeLayout>
