<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        style="@style/TextTitle"
        android:text="@string/new_category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/new_category_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <EditText
        android:hint="@string/new_category_name"
        style="@style/NewAppEditTextStyle"
        android:id="@+id/new_category_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_category_title"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/colors_list"
        android:layout_margin="15dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="5"
        tools:itemCount="5"
        tools:listitem="@layout/adapter_material_color_picker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_category_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>





    <Button
        android:id="@+id/save_category_button"
        android:layout_marginTop="20dp"
        style="@style/NewAppButtonThemeColored.Green"
        android:text="@string/save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/colors_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>